Change h1 tag to blue color
Changed the h1 tag to include a color style.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pagina de prubea git</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <h1 color:blue;>Hola mundo</h1>
     <p>Hola que tal</p>
     <p>Buenas tardes</p>
 </body>
